--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "crypto-tracker",
+  "homepage": "https://dmmoradiya.github.io/react_crypto_tracker",
   "version": "0.1.0",
   "private": true,
   "buffer": false,
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
+    "gh-pages": "^5.0.0",
     "html-react-parser": "^3.0.16",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
@@ -24,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
