--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "crypto-tracker",
-  "homepage": "https://dmmoradiya.github.io/react_crypto_tracker",
   "version": "0.1.0",
+  "homepage": "./https://dmmoradiya.github.io/react_crypto_tracker",
   "private": true,
-  "buffer": false,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -12,22 +11,21 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
-    "gh-pages": "^5.0.0",
-    "html-react-parser": "^3.0.16",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "build-localhost": "PUBLIC_URL=/ react-scripts build",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
